# dictionary

./: .env  .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yaml
src/: CMakeLists.txt  main.cpp
src/DBHandler/: database.cpp  database.h
